test/compile_errors/err_use_keyword_module.w
//! expect-error: 'if' is a reserved keyword and cannot be used as a module name
use foo.if

fn main:
    0
